demos/v2-self-managed-multi-region/time-keeper-ops/manifests/gateways/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: ingress-gateway
  namespace: istio-system
spec: 
  selector:
    istio: ingressgateway
  servers: 
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - v2.time-keeper.watch 
    - bank.v2.time-keeper.watch
    - bookinfo.v2.time-keeper.watch
